[package]
name = "kvaser-remotivebus-plugin"
version = "1.0.0"
edition = "2024"
authors = ["RemotiveLabs"]
license = "Proprietary"
description = "Kvaser RemotiveBus Plugin"
default-run = "kvaser-remotivebus-plugin"

[[bin]]
name = "kvaser-remotivebus-plugin"
path = "src/main.rs"

[[bin]]
name = "send-msg"
path = "src/bin/send_msg.rs"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
log = "0.4.2"
once_cell = "1.21.3"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = [
  "time",
  "net",
  "macros",
  "rt-multi-thread",
  "sync",
  "signal",
  "fs",
  "io-util",
] }
cfg-if = "1.0"
clap = { version = "4.5.45", features = ["derive"] }
clap_derive = "4.5.45"
socketcan = { version = "3.5.0", features = ["tokio"] }
env_logger = "0.11.8"
colored = "3.0.0"
tokio-util = "0.7.17"

[build-dependencies]
cc = "1.0"
bindgen = "0.71.1"

[dev-dependencies]
pretty_assertions = "1"
